[package]
name = "tools-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.2.2"
log = "0.4.11"
log4rs = {version = "1.0.0", features = ["gzip"]}
json = "*"

[[example]]
name = "showcase"
path = "examples/showcase.rs"
